prototypes/immich/ytt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-server
  namespace: immich
spec:
  ingressClassName: nginx
  rules:
    - host: immich.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: immich-server
                port:
                  number: 2283
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - immich.duchardt.net
      secretName: immich-certificate
